feat: implement update profile feature
